# ternary-search

./: .gitignore  AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
docs/: FROM_BINARY.md  FUTURE-INTEGRATION.md  MIGRATION.md
memory/: JOURNAL.md
src/: lib.rs
